4 - we need these buttons
#4 - we need these buttons instead - "Awareness", "Inquiry", "Service Order", "Work Order", "Circuit", "Trouble", "Other" and "Edit Premise". Clicking "Service Order" opens that record in a new window if a service order exists for that premise. If no service order exists for that premise, provide message "No service order exists for this premise".
For the "Awareness" button, copy the table and functionality of "task_other" to a new table "awareness" and show the popup add/edit form shown below. The type field needs to be populated with values from "engagement_mas" table.

--- a/.htaccess
+++ b/.htaccess
@@ -189,6 +189,12 @@ RewriteRule ^tasks/task_treatment_list index.php?module=$0&page=t-task_treatment
 #---------------------
 
 #---------------------
+#Awarness
+RewriteRule ^awareness/awareness_list&(.*)$  index.php?module=$0&page=m-awareness_list&%{QUERY_STRING}
+RewriteRule ^awareness/awareness_list index.php?module=$0&page=m-awareness_list
+#---------------------
+
+#---------------------
 #System Setting
 RewriteRule ^settings/setting_list? index.php?module=$0&page=s-setting_list&%{QUERY_STRING}
 RewriteRule ^settings/setting_list index.php?module=$0&page=s-setting_list
