--- a/.htaccess
+++ b/.htaccess
@@ -192,6 +192,14 @@ RewriteRule ^service_order/equipment_model_add&(.*)$ index.php?module=$0&page=m-
 RewriteRule ^service_order/equipment_model_add index.php?module=$0&page=m-equipment_model_add
 #---------------------
 
+#---------------------
+#Equipment
+RewriteRule ^service_order/equipment_list?(.*)$ index.php?module=$0&page=m-equipment_list&%{QUERY_STRING}
+RewriteRule ^service_order/equipment_list index.php?module=$0&page=m-equipment_list
+RewriteRule ^service_order/equipment_add&(.*)$ index.php?module=$0&page=m-equipment_add&%{QUERY_STRING}
+RewriteRule ^service_order/equipment_add index.php?module=$0&page=m-equipment_add
+#---------------------
+
 #------Treatment Product-------------
 RewriteRule ^master/treatment_product_list&(.*)$ index.php?module=$0&page=m-treatment_product_list&%{QUERY_STRING}
 RewriteRule ^master/treatment_product_list index.php?module=$0&page=m-treatment_product_list
