--- a/.htaccess
+++ b/.htaccess
@@ -411,6 +411,17 @@ RewriteRule ^circuit/circuit_add? index.php?module=$0&page=m-circuit_add&%{QUERY
 RewriteRule ^circuit/circuit_add index.php?module=$0&page=m-circuit_add
 #----------- circuit ------------
 
+#----------- premise circuit ------------
+RewriteRule ^premise_circuit/premise_circuit_list&(.*)$  index.php?module=$0&page=m-premise_circuit_list&%{QUERY_STRING}
+RewriteRule ^premise_circuit/premise_circuit_list index.php?module=$0&page=m-premise_circuit_list
+
+RewriteRule ^premise_circuit/premise_circuit_edit&(.*)$ index.php?module=$0&page=m-premise_circuit_add&%{QUERY_STRING} [L]
+RewriteRule ^premise_circuit/premise_circuit_edit index.php?module=$0&page=m-premise_circuit_add
+
+RewriteRule ^premise_circuit/premise_circuit_add? index.php?module=$0&page=m-premise_circuit_add&%{QUERY_STRING}
+RewriteRule ^premise_circuit/premise_circuit_add index.php?module=$0&page=m-premise_circuit_add
+#----------- premise circuit ------------
+
 #Speed Up using Caching
 # ----------------------------------
 # BEGIN Compress text files
