--- a/.htaccess
+++ b/.htaccess
@@ -174,6 +174,8 @@ RewriteRule ^premise/setup_premise_services_list index.php?module=$0&page=m-setu
 #Service Order
 RewriteRule ^service_order/list&(.*)$ index.php?module=$0&page=m-service_order_list&%{QUERY_STRING}
 RewriteRule ^service_order/list index.php?module=$0&page=m-service_order_list
+RewriteRule ^service_order/view&(.*)$ index.php?module=$0&page=m-service_order_view&%{QUERY_STRING} [L]
+RewriteRule ^service_order/view index.php?module=$0&page=m-service_order_view
 RewriteRule ^service_order/edit&(.*)$ index.php?module=$0&page=m-service_order_add&%{QUERY_STRING} [L]
 RewriteRule ^service_order/edit index.php?module=$0&page=m-service_order_add
 RewriteRule ^service_order/add&(.*)$ index.php?module=$0&page=m-service_order_add&%{QUERY_STRING} [L]
